# voterium_backend

./: .gitignore  Cargo.toml  voting_config.json
benches/: benchmark_count_funcs.rs  readme.MD
examples/: .env  cl_10.csv  vl_10.csv  voting_config_012.json
src/: auth.rs  ch.rs  counting.rs  counting_benchmarks.rs  counting_funcs.rs  errors.rs  handlers.rs  ledgers.rs  lib.rs  main.rs  main.rs.old  models.rs  routes.rs  utils.rs  vote_logger.rs  workers.rs
src/counting/: counting_funcs.rs  mod.rs  tests.rs  utils.rs
