[package]
name = "voterium_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["sqlite", "runtime-actix-native-tls", "macros"] }
dotenv = "0.15"
jsonwebtoken = "8"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
