[package]
name = "voterium_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6"
actix-rt = "2"
actix-web = "4"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22.1"
blake2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3.0"
dotenv = "0.15"
env_logger = "0.10"
hex = "0.4"  # For encoding the hash output to hexadecimal
jsonwebtoken = "8"
log = "0.4"
memchr = "2.5"
memmap2 = "0.5"
rand = "0.8.5"
rustc-hash = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["sqlite", "runtime-actix-native-tls", "macros"] }
uuid = { version = "1.2", features = ["v4"] }
